# aiobgjobs

./: .gitignore  README.md  pyproject.toml
aiobgjobs/: __init__.py  dispatcher.py  handlers.py  jobs.py  types.py
exemples/: no_decorators_exemple.py  simple.py
tests/: test_dispatcher.py
