[tool.poetry]
name = "aiobgjobs"
version = "0.1.5"
description = "This library is designed for asynchronous execution of scheduled tasks."
authors = ["daniilsamraev <shamraev.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
sphinx = "^5.3.0"
sphinx-markdown-builder = "^0.5.5"
sphinx-autodoc-typehints = "^1.19.5"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
